# hyperlight_agents

./: .gitignore  CLOUD_INIT_REMOVAL.md  Cargo.toml  FIRECRACKER_VM_FIXES.md  LARGE_OUTPUT_HANDLING.md  README.md  build-minimal-vm.sh  build.sh  cleanup-firecracker.sh  cloud-init-vm-agent.yaml  debug_main.rs  final_vm_test.sh  rust_vsock_connect  rust_vsock_connect.rs  setup-vm-environment.sh  setup_vm_agent.sh  test_large_output.md  test_vm_agent.sh  test_vsock_simple.sh  vm-agent-compact.sh  vm-agent-init.sh  vm-agent.service  vm-agent.sh
.cargo/: config.toml
firecracker/: Dockerfile.rootfs  firecracker-config.json  init.sh  vm-agent
guest/: .gitignore  Cargo.toml
guest-common/: Cargo.toml
guest-common/src/: lib.rs  prelude.rs  register_guest_function.rs
guest/.cargo/: config.toml
guest/src/: main.rs
host/: Cargo.toml
host/examples/: mcp_client_example.rs
host/src/: host_logger.rs  main.rs  mcp_server.rs
host/src/agents/: agent.rs
host/src/host_functions/: firecracker_vm_functions.rs  mod.rs  network_functions.rs
host/src/host_functions/vm_functions/: firecracker.rs  http_proxy.rs  log_listener.rs  mod.rs
host/src/mcp/: mcp_handler.rs  mcp_server.rs  mod.rs
hyperlight_agents_common/: Cargo.toml
hyperlight_agents_common/src/: constants.rs  lib.rs
hyperlight_agents_common/src/exports/: traits.rs
hyperlight_agents_common/src/structs/: agent_message.rs  mcp_tool.rs  mod.rs
hyperlight_agents_common/src/traits/: agent.rs
integration-tests/: Cargo.toml
integration-tests/tests/: integration_test.rs
vm-agent/: Cargo.toml
vm-agent/src/: main.rs
vm-agent/src/command_execution/: mod.rs
vm-agent/src/http_proxy/: mod.rs
vm-agent/src/logger/: bounded_logger.rs  mod.rs
vm-images/: firecracker-config.json
xtask/: Cargo.toml
xtask/src/: main.rs
