[package]
name = "hyperlight-agents-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperlight-guest = { workspace = true }
hyperlight-common = { workspace = true }
hyperlight-agents-common = { workspace = true }

regex = { version = "1.11.1", default-features = false }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
