[package]
name = "hyperlight-agents-host"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlight-host = { git = "https://github.com/hyperlight-dev/hyperlight.git", features = [
    "kvm",
] }
hyperlight-common = { git = "https://github.com/hyperlight-dev/hyperlight.git", default-features = false }
hyperlight-agents-common = { path = "./../hyperlight_agents_common", version = "0.1.0" }
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
lazy_static = "1.4"
rust-mcp-sdk = { version = "0.2.6", features = ["hyper-server"] }
async-trait = "0.1.74"
schemars = "0.8.16"
rust-mcp-schema = "0.4.0"
vsock = "0.4"
nix = "0.27"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
anyhow = { version = "1.0" }
cfg_aliases = "0.2.1"
built = { version = "0.7.7", features = ["chrono", "git2"] }
