[package]
name = "hyperlight-agents-host"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperlight-host = { workspace = true }
hyperlight-common = { workspace = true }
hyperlight-agents-common = { workspace = true }
reqwest = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
tokio = { workspace = true }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.3", features = ["v4"] }
lazy_static = "1.4"
rust-mcp-sdk = { version = "0.2.6", features = ["hyper-server"] }
async-trait = "0.1.74"
schemars = "0.8.16"
rust-mcp-schema = "0.4.0"
vsock = "0.4"
nix = "0.27"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
anyhow = { version = "1.0" }
cfg_aliases = "0.2.1"
built = { version = "0.7.7", features = ["chrono", "git2"] }
