[package]
name = "hyperlight-agents-common"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlight-common = { git = "https://github.com/hyperlight-dev/hyperlight.git", default-features = false }
strum = { version = "0.27", default-features = false, features = ["derive"] }
strum_macros = "0.27"
