[package]
name = "hyperlight-agents-common"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperlight-common = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
