[package]
name = "vm-agent"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
vsock = "0.4"

[[bin]]
name = "vm-agent"
path = "src/main.rs"
