[package]
name = "vm-agent"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
    "std",
] }
serde_json = { version = "1.0", default-features = false, features = [
    "alloc",
    "std",
] }
vsock = "0.4"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"

[[bin]]
name = "vm-agent"
path = "src/main.rs"
