[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
colored = "2.0"
which = "6.0"
tempfile = "3.8"
log = "0.4"
env_logger = "0.10"
